# product_gallery_normalizer

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: 01-implement-canvas.prompt.md  02-implement-compositor.prompt.md  03-implement-export.prompt.md  04-implement-woocommerce-models.prompt.md  05-implement-woocommerce-client.prompt.md  06-implement-credentials.prompt.md  07-implement-catalog-panel.prompt.md  08-implement-product-editor.prompt.md  09-implement-batch-and-tests.prompt.md  10-security-fixes.prompt.md
src/product_gallery_normalizer/: __init__.py  __main__.py  app.py  batch_operations.py  bg_generator.py  bg_remover.py  canvas.py  catalog_panel.py  compositor.py  config.py  credential_store.py  credentials_dialog.py  dialogs.py  exporter.py  gallery.py  product_editor_dialog.py  utils.py  window.py  woocommerce_client.py  woocommerce_models.py
tests/: conftest.py  test_batch_operations.py  test_compositor.py  test_exporter.py  test_woocommerce_models.py
